fix (#215 & #217): link contrast issue

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -216,6 +216,10 @@ p {
   margin-bottom: 30px;
 }
 
+.marginleft-sm {
+  margin-left: 30px;
+}
+
 .px3 {
   padding-left: 3rem;
   padding-right: 3rem;
